--- a/assignments.html
+++ b/assignments.html
@@ -30,7 +30,7 @@
             <p>Due: March 30, 2025</p>
             <div id="hw1-status">
                 <p>Homework not released yet</p>
-                <!-- <button onclick="promptPassword('1')">View Assignment</button> -->
+                <button onclick="promptPassword('1')">View Assignment</button>
             </div>
         </div>
 
